GROOVY-11292, GROOVY-11750, GROOVY-11768: non-sealed super class